2008-01-11  Marek Safar <marek.safar@gmail.com> 

	* libstetic/editor/ActionMenu.cs, libstetic/editor/ActionMenuBar.cs,
	libstetic/editor/ActionToolbar.cs, libstetic/undo/ActionDiffAdaptor.cs
	libstetic/editor/ActionGroupEditor.cs: Build with the latest gmcs.

2008-01-11  Marek Safar <marek.safar@gmail.com> 

	* libsteticui/ActionGroupToolbar.cs: Build with the latest gmcs.

2008-01-08  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectBackend.cs: Don't fire load events when loading a
	  widget. Fixes part of bug #352065.
	* libstetic/wrapper/Paned.cs: Fix bug in paned initialization. Fixes part of
	  bug #352065.
	* libstetic/editor/IconSelectorItem.cs: Added null check. Fixes some
	  crashes.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/Container.cs: Call base method when attaching/detaching
	  designer, since Object has some logic in those methods.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/ScrolledWindow.cs, libstetic/wrapper/objects.xml: Set
	  the correct default for ScrolledWindow.XscrollbarPolicy.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/editor/ActionMenuItem.cs: Don't try to remove the menu item
	  controls if they have not been added to the table.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/libsteticui.mdp, libstetic/libstetic.mdp, stetic/stetic.mdp,
	  stetic.mds: Updated.
	* libstetic/wrapper/objects.xml: In ScrolledWindow, ignore the default for
	  scrollbar policy. The default value returned by gtk is not correct.
	  Fixes bug #344196.
	* libstetic/ErrorWidget.cs: Allow exporting projects with unknown widgets.
	* stetic/UIManager.cs: Use gtk stock icons instead of gnome's.

2007-10-26  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/PaletteBackend.cs: Moved defaultActionIcon to ActionComponent.
	* libsteticui/ActionComponent.cs, libsteticui/ComponentType.cs,
	  libstetic/wrapper/Action.cs: Added a label property to the