@@ -1,3 +1,7 @@
+2008-01-14  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* libstetic/editor/Boolean.cs: Improve rendering of checkbox.
+
 2008-01-11  Marek Safar <marek.safar@gmail.com> 
 
 	* libstetic/editor/ActionMenu.cs, libstetic/editor/ActionMenuBar.cs,
